# wechat-mac-automation

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: README_zh.md  detailed-guide.md
src/wechat_mcp/: __init__.py  api.py  cli.py  fetch_messages_by_chat_utils.py  mcp_server.py  publish_moment_utils.py  wechat_accessibility.py
tests/: test_cli.py
