[project]
name = "wechat-mcp-server"
version = "0.2.0"
description = "WeChat MCP server for reading and replying to messages via macOS Accessibility APIs"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Banghao Chi", email = "banghao2@illinois.edu" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
    "Environment :: MacOS X",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "wechat",
    "mcp",
    "macos",
    "accessibility",
    "automation",
    "chatbot",
]
dependencies = [
    "pyobjc>=12.1",
    "pyobjc-framework-applicationservices>=12.1",
    "pillow>=10.0.0",
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/BiboyQG/WeChat-MCP"
Repository = "https://github.com/BiboyQG/WeChat-MCP.git"
Issues = "https://github.com/BiboyQG/WeChat-MCP/issues"
Documentation = "https://github.com/BiboyQG/WeChat-MCP#readme"

[project.scripts]
wechat-mcp = "wechat_mcp.mcp_server:main"
wechat-mcp-cli = "wechat_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wechat_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
