[project]
name = "wechat-mac-automation"
version = "0.2.0"
description = "WeChat for Mac automation toolkit with Python API, CLI, and MCP server support"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Banghao Chi", email = "banghao2@illinois.edu" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
    "Environment :: MacOS X",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "wechat",
    "mcp",
    "macos",
    "accessibility",
    "automation",
    "chatbot",
]
dependencies = [
    "pyobjc>=12.1",
    "pyobjc-framework-applicationservices>=12.1",
    "pillow>=10.0.0",
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/voidvon/wechat-mac-automation"
Repository = "https://github.com/voidvon/wechat-mac-automation.git"
Issues = "https://github.com/voidvon/wechat-mac-automation/issues"
Documentation = "https://github.com/voidvon/wechat-mac-automation#readme"

[project.scripts]
wechat-mac = "wechat_mcp.cli:main"
wechat-mac-mcp = "wechat_mcp.mcp_server:main"
wechat-mcp = "wechat_mcp.mcp_server:main"
wechat-mcp-cli = "wechat_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wechat_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
